--- a/IdentityByExamples/IdentityByExamples/appsettings.json
+++ b/IdentityByExamples/IdentityByExamples/appsettings.json
@@ -7,7 +7,8 @@
     }
   },
   "ConnectionStrings": {
-    "sqlConnection": "server=.; database=CodeMazeIdentity; Integrated Security=true"
+    //"sqlConnection": "server=.; database=CodeMazeIdentity; Integrated Security=true"
+    "sqlConnection": "Data Source=D-N-PC-13157;Initial Catalog=CodeMazeIdentity;Persist Security Info=True;User ID=Arghavani;Password=1234"
   },
   "AllowedHosts": "*"
 }
