1. Introducing Identity to the ASP.NET Core Project 2. User Registration with ASP.NET Core Identity

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /IdentityByExamples/IdentityByExamples/obj/Debug
 /IdentityByExamples/IdentityByExamples/obj
 /IdentityByExamples/.vs
+/IdentityByExamples/IdentityByExamples/bin
