implement reset password

--- a/IdentityByExamples/IdentityByExamples/appsettings.json
+++ b/IdentityByExamples/IdentityByExamples/appsettings.json
@@ -10,5 +10,15 @@
     //"sqlConnection": "server=.; database=CodeMazeIdentity; Integrated Security=true"
     "sqlConnection": "Data Source=D-N-PC-13157;Initial Catalog=CodeMazeIdentity;Persist Security Info=True;User ID=Arghavani;Password=1234"
   },
+  "EmailConfiguration": {
+    "From": "jamal3671@gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 587,
+    "HasProxy": true,
+    "ProxyHost": "10.187.100.29",
+    "ProxyPort": 3128,
+    "Username": "jamal3671@gmail.com",
+    "Password": "oo83oo55762"
+  },
   "AllowedHosts": "*"
 }
